# mlops

./: model_app.py  pyproject.toml  web_server.py
.github/old_workflows/: docker-image.yml
.github/workflows/: deploy.yml  docker-image.yml
TP1/: Dockerfile  docker-compose.yml  regression.joblib  requirements.txt
TP1/app/: main.py
TP2/: .gitignore  README.md  docker-compose.yml  pyproject.toml
TP2/server/canary/: main.py
TP2/server/normal/: Dockerfile  main.py  requirements.txt  test.py
TP2/training/: train.py
TP3/: README.md  examples.py  house_price_model.joblib  kafka_consumer.py  model_loader.py  produce.py  pyproject.toml  train_house_model.py
TP3/ex1/: consumer.py
TP3/ex2/: consumer_json.py  produce_json.py
TP3/ex3/: process_and_resend.py
TP5/: .gitignore  transpile_simple_model.py
